--- a/basic/index.html
+++ b/basic/index.html
@@ -3,17 +3,42 @@
 <head>
 	<meta charset="UTF-8">
 	<title>React Example</title>
+</head>
+<body>
+	<h1>Basic Example</h1>
+	<div id="container">
+		<p>
+      To install React, follow the instructions on
+      <a href="https://github.com/facebook/react/">GitHub</a>.
+    </p>
+	</div>
+	<div id="example"></div>
 	<script src="../build/react.js"></script>
 	<script src="../build/react-dom.js"></script>
 	<script src="../build/browser.min.js"></script>
-</head>
-<body>
-	<div id="example"></div>
 	<script type="text/babel">
 		ReactDOM.render(
 			<h1>hello world!</h1>,
 			document.getElementById('example')
 		);
+	</script>
+	<script>
+		var ExampleApplication = React.createClass({
+			render: function(){
+				var elapsed = Math.round(this.props.elapsed / 100);
+				var seconds = elapsed / 10 + (elapsed % 10 ? '' : '.0');
+				var message = 'React has been successfully running for ' + seconds +'seconds.';
+				return React.DOM.p(null, message)
+			}
+		});
+		var ExampleApplicationFactory = React.createFactory(ExampleApplication);
+		var start = new Date().getTime();
+		setInterval(function(){
+			ReactDOM.render(
+				ExampleApplicationFactory({elapsed: new Date().getTime() - start}),
+				document.getElementById('container')
+				)
+		}, 50)
 	</script>
 </body>
 </html>
