--- a/basic/index.html
+++ b/basic/index.html
@@ -3,6 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>React Example</title>
+	<style>
+		body, ul{
+			margin: 0
+		}
+		ul{
+			list-style: none
+		}
+	</style>
 </head>
 <body>
 	<h1>Basic Example</h1>
@@ -12,16 +20,11 @@
       <a href="https://github.com/facebook/react/">GitHub</a>.
     </p>
 	</div>
-	<div id="example"></div>
+	<div id="hello"></div>
+	<div id="names"></div>
 	<script src="../build/react.js"></script>
 	<script src="../build/react-dom.js"></script>
 	<script src="../build/browser.min.js"></script>
-	<script type="text/babel">
-		ReactDOM.render(
-			<h1>hello world!</h1>,
-			document.getElementById('example')
-		);
-	</script>
 	<script>
 		var ExampleApplication = React.createClass({
 			render: function(){
@@ -39,6 +42,23 @@
 				document.getElementById('container')
 				)
 		}, 50)
+	</script>
+	<script type="text/babel">
+		ReactDOM.render(
+			<h1>hello world!</h1>,
+			document.getElementById('hello')
+		);
+		var names = ['Alice', 'Emily', 'Kate'];
+		ReactDOM.render(
+			<ul>
+			{
+				names.map(function(name){
+				return <li> Hello,{name}!</li>
+				})
+			}
+			</ul>,
+			document.getElementById('names')
+		)
 	</script>
 </body>
 </html>
