--- a/index.html
+++ b/index.html
@@ -3,14 +3,6 @@
 <head>
 	<meta charset="UTF-8">
 	<title>React Example</title>
-	<style>
-		body, ul{
-			margin: 0
-		}
-		ul{
-			list-style: none
-		}
-	</style>
 </head>
 <body>
 	<h1>Basic Example</h1>
@@ -22,9 +14,10 @@
 	</div>
 	<div id="hello"></div>
 	<div id="names"></div>
-	<script src="../build/react.js"></script>
-	<script src="../build/react-dom.js"></script>
-	<script src="../build/browser.min.js"></script>
+	<div id="arr"></div>
+	<script src="./build/react.js"></script>
+	<script src="./build/react-dom.js"></script>
+	<script src="./build/browser.min.js"></script>
 	<script>
 		var ExampleApplication = React.createClass({
 			render: function(){
@@ -48,6 +41,7 @@
 			<h1>hello world!</h1>,
 			document.getElementById('hello')
 		);
+
 		var names = ['Alice', 'Emily', 'Kate'];
 		ReactDOM.render(
 			<ul>
@@ -58,6 +52,18 @@
 			}
 			</ul>,
 			document.getElementById('names')
+		)
+
+		var arr = [
+			<h3>Array-1</h3>,
+			<a>Array-2</a>,
+			<p>Array-3</p>
+		]
+		ReactDOM.render(
+			<div>
+				{arr}
+			</div>,
+			document.getElementById('arr')
 		)
 	</script>
 </body>
