--- a/basic/prop-ref.html
+++ b/basic/prop-ref.html
@@ -5,7 +5,7 @@
 	<title>React Example</title>
 </head>
 <body>
-	<div id="input"></div>
+	<div id="inputComponent"></div>
 	<script src="../build/react.js"></script>
   <script src="../build/react-dom.js"></script>
   <script src="../build/browser.min.js"></script>
@@ -26,7 +26,7 @@
     })
     ReactDOM.render(
       <InputComponent />,
-      document.getElementById('input')
+      document.getElementById('inputComponent')
     )
   </script>
 </body>
