--- a/basic/Lifecycle.html
+++ b/basic/Lifecycle.html
@@ -49,50 +49,81 @@
       // 二、实例化阶段
       getInitialState: function(){
         console.log("getInitialState")
-        return null;
+        return {
+        	count: 0
+        };
       },
       componentWillMount: function(){
         console.log("componentWillMount")
+        var self = this;
+        //this.timer = setInterval(function(){
+				//	self.setState({
+				//		count: self.state.count + 1
+				//	})
+        //},1000)
+      },
+      doUpdate: function(){
+				this.setState({
+					count: this.state.count + 1
+				})
       },
       render: function(){
         console.log("render")
-        return <h1>lifeCycleExample</h1>
+        return (
+        	<div>
+        		<h1>计数：{this.state.count}</h1>
+        		<button onClick={this.unmountComponent}>卸载该组件</button>
+        		<button onClick={this.doUpdate}>更新组件</button>
+        		<SubComp count={this.state.count}/>
+        	</div>
+        )
       },
       componentDidMount: function(){
         console.log("componentDidMount")
       },
       //三、更新阶段
-      componentWillReceiveProps: function(){
-        console.log("componentWillReceiveProps")
-      },
-      shouldComponentUpdate: function(){
-        console.log("shouldComponentUpdate")
-        return false;
+      shouldComponentUpdate: function(nextProp,nextState){
+        console.log("----shouldComponentUpdate")
+        //if(nextState.count > 3) return false;
+        return true;
       },
       componentWillUpdate: function(){
         console.log("componentWillUpdate")
       },
-      //再次调用render方法 
       componentDidUpdate: function(){
         console.log("componentDidUpdate")
       },
       //四、移除阶段
       componentWillUnmount: function(){
         console.log("componentWillUnmount")
+        clearInterval(this.timer)
+      },
+      //移除组件
+      unmountComponent: function(){
+				ReactDOM.unmountComponentAtNode(document.getElementById('container'))
+				console.log("unmountComponent SUCCESS!")
       }
     })
-    //第一次创建并渲染
+    //子组件
+    var SubComp = React.createClass({
+    	componentWillReceiveProps: function(nextProp){
+        console.log("componentWillReceiveProps")
+      },
+      shouldComponentUpdate: function(nextProp,nextState){
+      	if(nextProp.count > 5) return false;
+      	return true;
+      },
+    	render: function(){
+    		return (
+					<p>当前计数是：{this.props.count}</p>
+    		)
+    	}
+    })
+    //创建并渲染
     ReactDOM.render(
       <LifeComponent />,
       document.getElementById('container')
     )
-    //重新渲染
-    ReactDOM.render(
-      <LifeComponent />,
-      document.getElementById('container')
-    )
-    //移除组件
-    ReactDOM.unmountComponentAtNode(document.getElementById('container'))
   </script>
 </body>
 </html>
