--- a/React-QA/app/index.html
+++ b/React-QA/app/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="utf8">
-    <title>React问答 app</title>
+    <title>React问答</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <style>
       .container{
