--- a/flux-demo/index.html
+++ b/flux-demo/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>flux-demo</title>
 </head>
 <body>
 	<div id="root"></div>
-	<script src="bundle.js"></script>
+	<script src="init.js"></script>
+	<script src="/bundle.js"></script>
 </body>
 </html>
